# stfs

./: .clang-format  CMakeLists.txt  LICENSE  README.md
include/: BlockParser.hpp  Commons.hpp  Endian.hpp  FileExtractor.hpp  FileTableParser.hpp  HashVerifier.hpp  HeaderParser.hpp  MetadataParser.hpp  Package.hpp  SHA1.hpp  endian.hpp
include/stfs/: stfs.hpp
src/: BlockParser.cpp  FileExtractor.cpp  FileTableParser.cpp  HashVerifier.cpp  HeaderParser.cpp  MetadataParser.cpp  Package.cpp  stfs.cpp
